[project]
name = "link-shortener-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
